# CoreCode

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  nightly.yml
App/Source/: App.cpp  App.h
Core/Source/Core/: Core.cpp  Core.h
enc_temp_folder/b14abcbe3e6d7421fd3b49dc2f106b/: App.cpp
tests/: test_dice.cpp
